Добавлено отображение соседних объектов на карте и всплывающего окна для них

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
   </div>
 </footer>
 
-<template id="lodge-template" class="hidden">
+<template id="lodge-template" class="hidden" style="display: none;">
   <div class="dialog__panel">
     <h3 class="lodge__title"></h3>
     <p class="lodge__address"></p>
@@ -277,6 +277,8 @@
     </div>
   </div>
 </template>
+
+<script src="./js/map.js"></script>
 
 </body>
 </html>
