В форме значения features передаются в виде массива

--- a/index.html
+++ b/index.html
@@ -190,29 +190,29 @@
           </div>
           <div class="form__element">
             <label>Удобства: wi-fi, кухня, парковка, стиралка, лифт, кондиционер</label>
-            <fieldset id="features" name="features">
+            <fieldset id="features" name="features[]">
               <label class="feature">
-                <input type="checkbox" name="features" value="wifi"><span
+                <input type="checkbox" name="features[]" value="wifi"><span
                 class="feature__image  feature__image--wifi"></span>
               </label>
               <label class="feature">
-                <input type="checkbox" name="features" value="dishwasher"><span
+                <input type="checkbox" name="features[]" value="dishwasher"><span
                 class="feature__image  feature__image--dishwasher"></span>
               </label>
               <label class="feature">
-                <input type="checkbox" name="features" value="parking"><span
+                <input type="checkbox" name="features[]" value="parking"><span
                 class="feature__image  feature__image--parking"></span>
               </label>
               <label class="feature">
-                <input type="checkbox" name="features" value="washer"><span
+                <input type="checkbox" name="features[]" value="washer"><span
                 class="feature__image  feature__image--washer"></span>
               </label>
               <label class="feature">
-                <input type="checkbox" name="features" value="elevator"><span
+                <input type="checkbox" name="features[]" value="elevator"><span
                 class="feature__image  feature__image--elevator"></span>
               </label>
               <label class="feature">
-                <input type="checkbox" name="features" value="conditioner"><span
+                <input type="checkbox" name="features[]" value="conditioner"><span
                 class="feature__image  feature__image--conditioner"></span>
               </label>
             </fieldset>
