--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 <script src="./js/show-card.js"></script>
 <script src="./js/card.js"></script>
 <script src="./js/map.js"></script>
-<script src="./js/filter.js"></script>
+<script src="./js/pin-filter.js"></script>
 <script src="./js/synchronize-fields.js"></script>
 <script src="./js/form.js"></script>
 
